--- a/package.json
+++ b/package.json
@@ -8,5 +8,12 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "engines": {
+    "node": ">=14",
+    "pnpm": ">=3"
+  },
+  "dependencies": {
+    "express": "^4.18.1"
+  }
 }
