--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "src/main/server.ts",
   "scripts": {
     "dev": "ts-node .",
-    "dev:watch": "nodemon -x npm run dev"
+    "dev:watch": "nodemon -x npm run dev",
+    "lint": "eslint --fix --ext .ts",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -25,9 +27,11 @@
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "lint-staged": "^12.4.1",
     "nodemon": "^2.0.16",
     "prettier": "^2.6.2",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "husky": "^7.0.0"
   }
 }
