--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "ts-node -r tsconfig-paths/register .",
     "dev:watch": "nodemon -x npm run dev",
     "lint": "eslint --fix --ext .ts",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
