--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "src/main/server.ts",
   "scripts": {
+    "start": "node dist/main/server.js",
     "dev": "ts-node -r tsconfig-paths/register .",
     "dev:watch": "nodemon -x npm run dev",
     "lint": "eslint --fix --ext .ts",
